[gd_scene load_steps=8 format=3 uid="uid://c6oc3nu6ciagf"]

[ext_resource type="Texture2D" uid="uid://b5tuk2wil7bui" path="res://Characters/Мара/Char/CharImg/МАРА1.png" id="1_pokdm"]
[ext_resource type="Script" path="res://Characters/Мара/Char/Mara.gd" id="1_vvjj6"]
[ext_resource type="Texture2D" uid="uid://h6wi5q3jkygt" path="res://Characters/Мара/Char/CharImg/МАРА2.png" id="2_cfe2k"]
[ext_resource type="Script" path="res://Scripts/ItemHoverScript.gd" id="2_lomjb"]
[ext_resource type="Script" path="res://Scripts/PointsOnScreen.gd" id="3_7xn07"]

[sub_resource type="SpriteFrames" id="SpriteFrames_1nkig"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_pokdm")
}],
"loop": true,
"name": &"disguase",
"speed": 5.0
}, {
"frames": [],
"loop": true,
"name": &"real",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_cfe2k")
}],
"loop": true,
"name": &"undisclosed",
"speed": 7.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cjeit"]
size = Vector2(306, 462)

[node name="Mara" type="AnimatedSprite2D"]
position = Vector2(174, 212)
scale = Vector2(0.640332, 0.708514)
sprite_frames = SubResource("SpriteFrames_1nkig")
animation = &"disguase"
script = ExtResource("1_vvjj6")
name_of_character = "Мара"
is_monster = true
speed = 300

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(-221.76, -350.734)
scale = Vector2(1.56169, 1.41141)
script = ExtResource("2_lomjb")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(131, 264)
shape = SubResource("RectangleShape2D_cjeit")

[node name="Points" type="Node2D" parent="."]
position = Vector2(28, -40)
script = ExtResource("3_7xn07")

[node name="MiddlePoint" type="Node2D" parent="Points"]

[node name="LetInPoint" type="Node2D" parent="Points"]

[node name="DontLetInPoint" type="Node2D" parent="Points"]
